README updated, GPU benchmarks now work